<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:fillViewport="true"
    android:background="@drawable/sea7">

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        tools:context=".authentication.authFragment.LoginFragment">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_above="@id/mid"
            android:layout_centerHorizontal="true"
            android:text="@string/signup"
            android:textSize="28sp"
            android:textStyle="bold" />

        <LinearLayout
            android:id="@+id/mid"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_centerInParent="true"
            android:layout_margin="15dp"
            android:background="@drawable/tr_blue"
            android:orientation="vertical"
            android:padding="10dp">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginBottom="5dp"
                android:background="@drawable/input_light_shape"
                android:gravity="center"
                android:orientation="horizontal">

                <ImageView
                    android:layout_width="0dp"
                    android:layout_height="30dp"
                    android:layout_marginTop="8dp"
                    android:layout_weight=".2"
                    android:padding="2dp"
                    android:src="@drawable/ic_email_black_24dp" />

                <com.google.android.material.textfield.TextInputLayout
                    android:id="@+id/emailTIL"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_weight="1.8">

                    <com.google.android.material.textfield.TextInputEditText
                        android:id="@+id/emailET"
                        android:layout_width="match_parent"
                        android:layout_height="40dp"
                        android:layout_marginBottom="2dp"
                        android:hint="@string/email"
                        android:inputType="text"
                        android:textSize="17sp" />

                </com.google.android.material.textfield.TextInputLayout>
            </LinearLayout>


            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginBottom="20dp"
                android:background="@drawable/input_light_shape"
                android:gravity="center"
                android:orientation="horizontal">

                <ImageView
                    android:layout_width="0dp"
                    android:layout_height="30dp"
                    android:layout_marginTop="8dp"
                    android:layout_weight=".2"
                    android:padding="2dp"
                    android:src="@drawable/ic_lock_black_24dp" />

                <com.google.android.material.textfield.TextInputLayout
                    android:id="@+id/passTIL"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_weight="1.8"
                    app:passwordToggleEnabled="true">

                    <com.google.android.material.textfield.TextInputEditText
                        android:id="@+id/passET"
                        android:layout_width="match_parent"
                        android:layout_height="40dp"
                        android:layout_marginBottom="2dp"
                        android:hint="@string/password"
                        android:inputType="textPassword"
                        android:textSize="17sp" />

                </com.google.android.material.textfield.TextInputLayout>
            </LinearLayout>

            <FrameLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content">
                <Button
                    android:id="@+id/btn_login"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginBottom="5dp"
                    android:background="@drawable/btn_tr_green"
                    android:text="@string/signup"
                    android:textAllCaps="false" />

                <ProgressBar
                    android:id="@+id/ui_progressBar"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center"/>
            </FrameLayout>

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginBottom="5dp"
                android:text="Already have account? Please login"
                android:textAlignment="center"
                android:textColor="#F44336"
                android:textSize="18sp"
                android:textStyle="bold" />

            <Button
                android:id="@+id/btn_signup"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:background="@drawable/btn_tr_yellow"
                android:text="@string/login"
                android:textAllCaps="false" />

        </LinearLayout>
    </RelativeLayout>
</ScrollView>