<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:background="@drawable/sea11"
    android:orientation="vertical">

    <com.google.android.material.appbar.AppBarLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <androidx.appcompat.widget.Toolbar
            android:id="@+id/profile_toolbar"
            android:layout_width="match_parent"
            android:layout_height="?attr/actionBarSize"
            android:theme="@style/ToolbarTheme" />
    </com.google.android.material.appbar.AppBarLayout>

    <androidx.core.widget.NestedScrollView
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_gravity="center">

            <LinearLayout
                android:id="@+id/top_layout"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="10dp"
                android:orientation="vertical">

                <LinearLayout
                    android:id="@+id/img_layout"
                    android:layout_width="128dp"
                    android:layout_height="128dp"
                    android:layout_gravity="center"
                    android:layout_marginTop="10dp"
                    android:background="@drawable/circle2">

                    <de.hdodenhof.circleimageview.CircleImageView
                        android:id="@+id/profile_image"
                        android:layout_width="match_parent"
                        android:layout_height="118dp"
                        android:layout_gravity="center"
                        android:src="@drawable/white_cricle" />

                </LinearLayout>


                <Button
                    android:id="@+id/add_img_btn"
                    android:layout_width="110dp"
                    android:layout_height="30dp"
                    android:layout_gravity="center"
                    android:layout_marginTop="10dp"
                    android:background="@drawable/btn_tr_orange"
                    android:text="@string/choose_photo"
                    android:textAllCaps="false"
                    android:textColor="#000" />

            </LinearLayout>

            <LinearLayout
                android:id="@+id/mid"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_below="@id/top_layout"
                android:layout_centerInParent="true"
                android:layout_margin="15dp"
                android:orientation="vertical"
                android:padding="10dp">

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginBottom="6dp"
                    android:gravity="center"
                    android:background="@drawable/boarder_tv_white"
                    android:orientation="horizontal">

                    <ImageView
                        android:layout_width="0dp"
                        android:layout_height="30dp"
                        android:layout_marginTop="8dp"
                        android:layout_weight=".2"
                        android:padding="2dp"
                        android:src="@drawable/ic_person_black_24dp" />

                    <com.google.android.material.textfield.TextInputLayout
                        android:layout_width="0dp"
                        android:layout_height="wrap_content"
                        android:layout_weight="1.8">

                        <com.google.android.material.textfield.TextInputEditText
                            android:id="@+id/nameET"
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:layout_marginBottom="7dp"
                            android:hint="@string/name"
                            android:inputType="text"
                            android:textSize="17sp" />

                    </com.google.android.material.textfield.TextInputLayout>
                </LinearLayout>


                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginBottom="6dp"
                    android:gravity="center"
                    android:background="@drawable/boarder_tv_white"
                    android:orientation="horizontal">

                    <ImageView
                        android:layout_width="0dp"
                        android:layout_height="30dp"
                        android:layout_marginTop="8dp"
                        android:layout_weight=".2"
                        android:padding="2dp"
                        android:src="@drawable/ic_phone_black_24dp" />

                    <com.google.android.material.textfield.TextInputLayout
                        android:layout_width="0dp"
                        android:layout_height="wrap_content"
                        android:layout_weight="1.8">

                        <com.google.android.material.textfield.TextInputEditText
                            android:id="@+id/contactET"
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:layout_marginBottom="7dp"
                            android:hint="@string/contact"
                            android:inputType="numberDecimal"
                            android:textSize="17sp" />

                    </com.google.android.material.textfield.TextInputLayout>

                </LinearLayout>

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:gravity="center"
                    android:background="@drawable/border_txtview"
                    android:orientation="horizontal">

                    <ImageView
                        android:layout_width="0dp"
                        android:layout_height="30dp"
                        android:layout_marginTop="8dp"
                        android:layout_weight=".2"
                        android:padding="2dp"
                        android:src="@drawable/ic_email_black_24dp" />

                    <com.google.android.material.textfield.TextInputLayout
                        android:layout_width="0dp"
                        android:layout_height="wrap_content"
                        android:layout_weight="1.8">

                        <com.google.android.material.textfield.TextInputEditText
                            android:id="@+id/emailET"
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:layout_marginBottom="2dp"
                            android:hint="@string/email"
                            android:inputType="textEmailAddress"
                            android:textSize="17sp" />

                    </com.google.android.material.textfield.TextInputLayout>
                </LinearLayout>

                <Button
                    android:id="@+id/btn_update"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="20dp"
                    android:background="@drawable/btn_tr_blue"
                    android:text="@string/save_profile"
                    android:textColor="#fff"
                    android:textAllCaps="false" />

            </LinearLayout>
        </RelativeLayout>


    </androidx.core.widget.NestedScrollView>



</LinearLayout>